--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -5,3 +5,5 @@ backgroundColor="#0e1117"
 secondaryBackgroundColor="#262730"  
 textColor="#ffffff"  
 font="sans serif"
+[server]
+maxUploadSize = 5120
